--- a/ptm-index.html
+++ b/ptm-index.html
@@ -28,7 +28,7 @@
                 <div class="col-10 col-lg-2 order-lg-1">
                     <div class="site-branding">
                         <div class="site-title">
-                            <a href="#"><img src="images/DunmanHighSchoolCrest.png" alt="logo"></a>
+                            <a href="#"><img src="DunmanHighSchoolCrest.png" alt="logo"></a>
                         </div><!-- .site-title -->
                     </div><!-- .site-branding -->
                 </div><!-- .col -->
@@ -62,7 +62,7 @@
 
     <div class="swiper-container hero-slider">
         <div class="swiper-wrapper">
-            <div class="swiper-slide" style="background: url('images/background0.jpg') no-repeat">
+            <div class="swiper-slide" style="background: url('background0.jpg') no-repeat">
                 <div class="hero-content">
                     <div class="container">
                         <div class="row">
