--- a/ptm-html-index.html
+++ b/ptm-html-index.html
@@ -5,11 +5,8 @@
 </head>
 
 <body>
-
-<a href="#"><img src="images/DunmanHighSchoolCrest.png" alt="logo"></a>
-<ul>
-    <li><a href="#">Home</a></li>
-</ul>
+<img src="images/DunmanHighSchoolCrest.png" alt="logo">
+<h1><a href="#">Home</h1>
 <div class="log-in">
     <a class="btn btn-4" href="#">Log In</a>
 </div><!-- .log-in -->
