--- a/ptm-html-index.html
+++ b/ptm-html-index.html
@@ -2,14 +2,29 @@
 <html>
 <head>
     <title>PTM</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-    <img src="images/DunmanHighSchoolCrest.png" alt="logo">
-    <h1>Home</h1>
-    <button type="button">Log In</button>
-    <button type="button">Sign Up</button>
-    <p>PTM is coming up <br>Book your slots today!</p>
-    <button type="button">Click me to Book</button>
+    <header>PTM Homepage</header>
+    <header class="site-header">
+    <div class="header-bar">
+        <div class="container-fluid">
+            <div class="row align-items-center">
+                <div class="col-10 col-lg-2 order-lg-1">
+                    <div class="site-branding">
+                        <div class="site-title">
+                            <a href="#"><img src="images/DunmanHighSchoolCrest.png" alt="logo"></a>
+                        </div><!-- .site-title -->
+                    </div><!-- .site-branding -->
+                </div><!-- .col -->
+            <h1>Home</h1>
+            <button type="button">Log In</button>
+            <button type="button">Sign Up</button>
+            <p>PTM is coming up <br>Book your slots today!</p>
+            <button type="button">Click me to Book</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
