--- a/ptm-html-index.html
+++ b/ptm-html-index.html
@@ -6,25 +6,24 @@
 </head>
 
 <body>
-    <header>PTM Homepage</header>
-    <header class="site-header">
-    <div class="header-bar">
-        <div class="container-fluid">
-            <div class="row align-items-center">
-                <div class="col-10 col-lg-2 order-lg-1">
-                    <div class="site-branding">
-                        <div class="site-title">
-                            <a href="#"><img src="images/DunmanHighSchoolCrest.png" alt="logo"></a>
-                        </div><!-- .site-title -->
-                    </div><!-- .site-branding -->
-                </div><!-- .col -->
-            <h1>Home</h1>
+    <header>
+        <div class="site-header">
+            <div class="home">
+                <h1>Home</h1>
+            </div>
+            <ul>
+                <li class="active"><a href="#">Home</a></li>
+            </ul>
+        </div>
+        <div class="logo">
+            <img src="images/DunmanHighSchoolCrest.png" alt="logo">
+        </div>
+        <div class="account">
             <button type="button">Log In</button>
             <button type="button">Sign Up</button>
             <p>PTM is coming up <br>Book your slots today!</p>
             <button type="button">Click me to Book</button>
-            </div>
         </div>
-    </div>
+    </header>
 </body>
 </html>
