--- a/ptm-html-index.html
+++ b/ptm-html-index.html
@@ -4,26 +4,25 @@
         <title>PTM</title>
         <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-
 <body>
         <header>
-            <div class="site-header">
-                <div class="home">
-                    <h1>Home</h1>
+                <div class="main">
+                        <div class="home">
+                                <h1>Home</h1>
+                        </div>
+                        <ul>
+                                <li class="active"><a href="#">Home</a></li>
+                        </ul>
                 </div>
-                <ul>
-                    <li class="active"><a href="#">Home</a></li>
-                </ul>
-            </div>
-            <div class="logo">
-                <img src="DunmanHighSchoolCrest.PNG" alt="logo">
-            </div>
-            <div class="account">
-                <button type="button">Log In</button>
-                <button type="button">Sign Up</button>
-                <p>PTM is coming up <br>Book your slots today!</p>
-                <button type="button">Click me to Book</button>
-            </div>
+                <div class="logo">
+                        <img src="DunmanHighSchoolCrest.png" alt="logo">
+                </div>
+                <div class="account">
+                        <button type="button">Log In</button>
+                        <button type="button">Sign Up</button>
+                        <p>PTM is coming up <br>Book your slots today!</p>
+                        <button type="button">Click me to Book</button>
+                </div>
         </header>
 </body>
 </html>
