--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 <body>
         <header>
                 <div class="main">
-                        <div class="home">
-                                <h1>Home</h1>
-                        </div>
+                        <div class="home"></div>
                         <ul>
                                 <li class="active"><a href="#">Home</a></li>
                         </ul>
