--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
                 <div class="account">
                         <button type="button">Log In</button>
                         <button type="button">Sign Up</button>
+                </div>
+                <div class="text">
                         <p>PTM is coming up <br>Book your slots today!</p>
                         <button type="button">Click me to Book</button>
                 </div>
