Update and rename index_html.html to index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
         <title>PTM</title>
-        <link rel="stylesheet" type="text/css" href="index_css.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
         <header>
